matrix/synapse/synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: matrix
  name: matrix-deployment
  labels:
    app: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
  template:
    metadata:
      labels:
        app: matrix
    spec:
      containers:
      - name: matrix
        image: avhost/docker-matrix:latest
        ports:
        - containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-service
  namespace: matrix
spec:
  selector:
    app: matrix
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
